--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^10.5.2",
+    "minimatch": "^3.0.4",
+    "npm": "^6.2.0",
     "tsd": "^0.6.5",
     "typescript": "^2.9.2"
   }
